2011-02-05  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/network/JoinThread.cpp: Filter out old models.
	* src/solver/RelSatSolver.cpp: Likewise.

	* include/network/ConcurrentMessageDispatcher.h: Back to just sending
	ctx_id and peq_cnt.
	* src/network/ConcurrentMessageDispatcher.cpp: Likewise.
	* include/network/MessagingGateway.h: Likewise.

	* include/dmcs/StreamingBackwardMessage.h: Attach with each belief
	state a session_id.
	* include/network/NeighborThread.h: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* include/network/OutputThread.h: Likewise.

	* include/dmcs/StreamingDMCS.h: Add communication channel between
	SAT solver and Joiner.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* include/solver/SatSolverFactory.h: Likewise.
	* include/solver/RelSatSolver.h: Likewise.
	* include/network/ThreadFactory.h: Likewise.
	* include/network/JoinThread.h: Likewise.

	* include/dmcs/StreamingDMCS.h: Distinguish my_session_id and
	parent_session_id.
	* include/network/Handler.tcc: Likewise.
	* include/solver/RelSatSolver.h: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.

	* include/dmcs/ConflictNotification.h: Add session_id here and
	there.
	* include/dmcs/StreamingDMCS.h: Likewise.
	* include/dmcs/StreamingDMCSNotification.h: Likewise.
	* include/dmcs/StreamingForwardMessage.h: Likewise.
	* include/dmcs/UnsatNotification.h: Likewise.
	* include/network/Handler.tcc: Likewise.
	* include/network/JoinThread.h: Likewise.
	* include/network/NeighborOut.h: Likewise.
	* include/network/RouterThread.h: Likewise.
	* include/network/ThreadFactory.h: Likewise.
	* include/solver/ChoicePoint.h: Likewise.
	* include/solver/RelSatSolver.h: Likewise.
	* include/solver/SatSolverFactory.h: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* src/dmcsc.cpp: Likewise.